--- a/views/game.html
+++ b/views/game.html
@@ -1,7 +1,7 @@
 <div class="concentration-label">Concentration Game</div>
-<div class="flip-cards-container" ng-controller="DefaultController as cntr">
+<div class="flip-cards-container">
   <ul class="flip-cards-grid">
-    <li class="flip-card" ng-repeat="card in cntr.cards">
+    <li class="flip-card" ng-repeat="card in main.cards">
       <div class="flip-container">
         <div class="flipper">
           <div class="flip-card-front">
