--- a/app/views/results.html
+++ b/app/views/results.html
@@ -1,5 +1,5 @@
 <div class="concentration-label">Concentration Game</div>
 <div class="congratulations-container">
   <div class="congratulations-label">Congratulations!</div>
-  <div class="play-again-label btn-primary">Play again</div>
+  <a href="/#/" class="play-again-label btn btn-primary">Play again</a>
 </div>
