--- a/styles/views/_setup.scss
+++ b/styles/views/_setup.scss
@@ -18,7 +18,7 @@ ul.difficulty-levels {
 .easy-level, .medium-level, .hard-level {
   font-family: "Josefin Slab Bold";
   display: inline-block;
-  background-color: #cf5037;
+  /*background-color: #cf5037;*/
   color: white;
   padding: .3em .9em .4em;
   margin: 0.5em;
@@ -27,10 +27,10 @@ ul.difficulty-levels {
   cursor: pointer;
 }
 .easy-level {
-  background-color: #226ed7;
+  /*background-color: #226ed7;*/
 }
 .medium-level {
-  background-color: #f0ad4e;
+  /*background-color: #f0ad4e;*/
 }
 .level-label {
   display: block;
