--- a/app/views/play.html
+++ b/app/views/play.html
@@ -1,7 +1,7 @@
 <div class="concentration-label">Concentration Game</div>
 <div class="flip-cards-container">
   <ul class="flip-cards-grid">
-    <li class="flip-card" ng-repeat="card in main.cards">
+    <li class="flip-card" ng-repeat="card in play.cards">
       <div class="flip-container">
         <div class="flipper">
           <div class="flip-card-front">
