--- a/styles/style.css
+++ b/styles/style.css
@@ -7767,7 +7767,7 @@ ul.difficulty-levels {
 .flip-container {
   perspective: 1000; }
 
-.flip-container:hover .flipper {
+.flip-container.flipped .flipper {
   transform: rotateY(180deg); }
 
 .flipper {
