--- a/app/views/play.html
+++ b/app/views/play.html
@@ -8,7 +8,7 @@
             <img class="flip-card-image" src="/images/cards/hidden_card.png" />
           </div>
           <div class="flip-card-back">
-            <img class="flip-card-image" src="/images/cards/red_joker.png" />
+            <img class="flip-card-image" src="/images/cards/{{ card.rank }}_of_{{ card.suit }}.png" />
           </div>
         </div>
       </div>
@@ -16,7 +16,7 @@
   </ul>
 </div>
 <div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-    4 pairs
+  <div class="progress-bar" role="progressbar" aria-valuenow="{{ play.percentageDone }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ play.percentageDone }}%;">
+    {{ play.pairsLeft }} pairs left
   </div>
 </div>
