--- a/app/views/play.html
+++ b/app/views/play.html
@@ -5,10 +5,10 @@
       <div class="flip-container" ng-class="{flipped: card.flipped}" ng-click="play.handleCardClick(card)">
         <div class="flipper">
           <div class="flip-card-front">
-            <img class="flip-card-image" src="/images/cards/hidden_card.png" />
+            <img class="flip-card-image" src="images/cards/hidden_card.png" />
           </div>
           <div class="flip-card-back">
-            <img class="flip-card-image" src="/images/cards/{{ card.rank }}_of_{{ card.suit }}.png" />
+            <img class="flip-card-image" src="images/cards/{{ card.rank }}_of_{{ card.suit }}.png" />
           </div>
         </div>
       </div>
