Abstract concentration game logic in a separate service

--- a/app/views/play.html
+++ b/app/views/play.html
@@ -16,7 +16,7 @@
   </ul>
 </div>
 <div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="{{ play.percentageDone }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ play.percentageDone }}%;">
-    {{ play.pairsLeft }} pairs left
+  <div class="progress-bar" role="progressbar" aria-valuenow="{{ play.progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ play.progress }}%;">
+    {{ play.matchesLeft }} pairs left
   </div>
 </div>
