--- a/styles/style.css
+++ b/styles/style.css
@@ -7703,6 +7703,10 @@ ul.social-icons .icon:hover {
 .difficulty-selection {
   position: relative;
   top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
   transform: translateY(-50%);
   text-align: center; }
 
@@ -7765,28 +7769,83 @@ ul.difficulty-levels {
 
 /* Flip Animation */
 .flip-container {
-  perspective: 1000; }
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -ms-perspective: 1000;
+  perspective: 1000;
+  -ms-transform: perspective(1000px);
+  -moz-transform: perspective(1000px);
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d; }
 
-.flip-container.flipped .flipper {
+/*.flip-container.flipped .flipper {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform:    rotateY(180deg);
+  -ms-transform:     rotateY(180deg);
+  -o-transform:      rotateY(180deg);
+  transform:         rotateY(180deg);
+}*/
+.flip-container.flipped .flip-card-back {
+  -webkit-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
+  transform: rotateY(0deg); }
+
+.flip-container.flipped .flip-card-front {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
   transform: rotateY(180deg); }
 
 .flipper {
+  -webkit-transition: 0.6s;
+  -webkit-transform-style: preserve-3d;
+  -ms-transition: 0.6s;
+  -moz-transition: 0.6s;
+  -moz-transform: perspective(1000px);
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
   transition: 0.6s;
   transform-style: preserve-3d;
   position: relative; }
 
 .flip-card-front, .flip-card-back {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
   backface-visibility: hidden;
+  -webkit-transition: 0.6s;
+  -webkit-transform-style: preserve-3d;
+  -webkit-transform: rotateY(0deg);
+  -moz-transition: 0.6s;
+  -moz-transform-style: preserve-3d;
+  -moz-transform: rotateY(0deg);
+  -o-transition: 0.6s;
+  -o-transform-style: preserve-3d;
+  -o-transform: rotateY(0deg);
+  -ms-transition: 0.6s;
+  -ms-transform-style: preserve-3d;
+  -ms-transform: rotateY(0deg);
+  transition: 0.6s;
+  transform-style: preserve-3d;
+  transform: rotateY(0deg);
   position: absolute;
   top: 0;
   left: 0; }
 
 .flip-card-front {
-  z-index: 2;
-  transform: rotateY(0deg); }
+  -webkit-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  z-index: 2; }
 
 .flip-card-back {
-  transform: rotateY(180deg); }
+  -webkit-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  transform: rotateY(-180deg); }
 
 /* Progress indicator */
 .progress {
@@ -7804,6 +7863,10 @@ ul.difficulty-levels {
   position: relative;
   top: 50%;
   text-align: center;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
   transform: translateY(-50%); }
 
 .congratulations-label {
