--- a/styles/views/_congratulations.scss
+++ b/styles/views/_congratulations.scss
@@ -2,7 +2,11 @@
   position: relative;
   top: 50%;
   text-align: center;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform:    translateY(-50%);
+  -ms-transform:     translateY(-50%);
+  -o-transform:      translateY(-50%);
+  transform:         translateY(-50%);
 }
 .congratulations-label {
   font-family: "Josefin Slab Bold";
