--- a/styles/views/_setup.scss
+++ b/styles/views/_setup.scss
@@ -1,7 +1,11 @@
 .difficulty-selection {
   position: relative;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform:    translateY(-50%);
+  -ms-transform:     translateY(-50%);
+  -o-transform:      translateY(-50%);
+  transform:         translateY(-50%);
   text-align: center;
 }
 .difficulty-label {
