--- a/app/views/play.html
+++ b/app/views/play.html
@@ -1,4 +1,4 @@
-<div class="concentration-label">Concentration Game</div>
+<main-title></main-title>
 <div class="flip-cards-container">
   <ul class="flip-cards-grid">
     <li class="flip-card" ng-repeat="card in play.cards">
