--- a/app/views/results.html
+++ b/app/views/results.html
@@ -1,4 +1,4 @@
-<div class="concentration-label">Concentration Game</div>
+<main-title></main-title>
 <div class="congratulations-container">
   <div class="congratulations-label">Victory!</div>
   <a href="#/" class="play-again-label btn btn-primary">Play again</a>
